# safe-password-generator

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt
src/safe_password_generator/cli/: main.py
src/safe_password_generator/core/: exceptions.py  generator.py
src/safe_password_generator/web/: app.py
src/safe_password_generator/web/assets/: style.css
tests/: test_core.py
